test/users/vass/compilerAssert/compilerAssert10.good
compilerAssert10.chpl:2: error: assert failed - message
