test/users/vass/compilerAssert/compilerAssert10.chpl

compilerAssert(false, "message", 0);
